--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.1.5
   screenshot: ^3.0.0
   share_plus: ^10.1.4
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
