--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   screenshot: ^3.0.0
   share_plus: ^10.1.4
   google_generative_ai: ^0.4.6
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
